Adds hashed passwords to Agent model
(see chapter 14 of AWDwR 4th ed.)

--- a/app/views/agents/_form.html.erb
+++ b/app/views/agents/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+  <div class="field">
+    <%= f.label :password, 'Password' %><br />
+    <%= f.password_field :password, :size => 40 %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation, 'Confirm' %>:
+    <%= f.password_field :password_confirmation, :size => 40 %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
